# ChangeLog for dev-util/bzr
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.98 2009/06/17 13:08:24 fauli Exp $

  17 Jun 2009; Christian Faulhammer <fauli@gentoo.org> bzr-1.15.1.ebuild:
  stable x86, bug 274451

*bzr-1.16_rc1 (17 Jun 2009)

  17 Jun 2009; Peter Volkov <pva@gentoo.org> +bzr-1.16_rc1.ebuild:
  Version bump.

*bzr-1.15.1 (10 Jun 2009)

  10 Jun 2009; Peter Volkov <pva@gentoo.org> -bzr-1.15.ebuild,
  +bzr-1.15.1.ebuild:
  Version bump, missed pyrex generated C files now back, bug #273328, thank
  Andrew Cowie and Mark Lee.

*bzr-1.15 (05 Jun 2009)

  05 Jun 2009; Peter Volkov <pva@gentoo.org> +bzr-1.15.ebuild:
  Version bump.

  01 Jun 2009; Markus Meier <maekke@gentoo.org> bzr-1.13.2.ebuild:
  amd64 stable, bug #271130

  25 May 2009; Christian Faulhammer <fauli@gentoo.org> bzr-1.13.2.ebuild:
  stable x86, bug 271130

*bzr-1.14.1 (02 May 2009)

  02 May 2009; Peter Volkov <pva@gentoo.org> -bzr-1.14.ebuild,
  +bzr-1.14.1.ebuild:
  Version bump.

*bzr-1.14 (01 May 2009)
*bzr-1.13.2 (01 May 2009)

  01 May 2009; Peter Volkov <pva@gentoo.org> -bzr-1.13.1.ebuild,
  +bzr-1.13.2.ebuild, -bzr-1.14_rc2.ebuild, +bzr-1.14.ebuild:
  Version bump.

*bzr-1.14_rc2 (25 Apr 2009)

  25 Apr 2009; Peter Volkov <pva@gentoo.org> -bzr-1.14_rc1.ebuild,
  +bzr-1.14_rc2.ebuild:
  Version bump.

*bzr-1.14_rc1 (11 Apr 2009)

  11 Apr 2009; Peter Volkov <pva@gentoo.org> bzr-1.13.1.ebuild,
  +bzr-1.14_rc1.ebuild:
  Version bump.

*bzr-1.13.1 (25 Mar 2009)

  25 Mar 2009; Peter Volkov <pva@gentoo.org> -bzr-1.13.ebuild,
  +bzr-1.13.1.ebuild:
  Version bump.

  22 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing hawking as a maintainer since he was retired.

*bzr-1.13 (17 Mar 2009)

  17 Mar 2009; Peter Volkov <pva@gentoo.org> -bzr-1.13_rc1.ebuild,
  +bzr-1.13.ebuild:
  Version bump.

*bzr-1.13_rc1 (15 Mar 2009)
