@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/bzrtools
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzrtools/ChangeLog,v 1.60 2009/06/17 13:09:50 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzrtools/ChangeLog,v 1.61 2009/07/02 14:37:45 armin76 Exp $
+
+  02 Jul 2009; Raúl Porcel <armin76@gentoo.org> bzrtools-1.15.0.ebuild:
+  sparc stable wrt #274451
 
   17 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
   bzrtools-1.15.0.ebuild:
