@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/bzr
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.98 2009/06/17 13:08:24 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.99 2009/07/02 14:36:50 armin76 Exp $
+
+  02 Jul 2009; Raúl Porcel <armin76@gentoo.org> bzr-1.15.1.ebuild:
+  sparc stable wrt #274451
 
   17 Jun 2009; Christian Faulhammer <fauli@gentoo.org> bzr-1.15.1.ebuild:
   stable x86, bug 274451
